--- a/app/src/main/res/layout/item.xml
+++ b/app/src/main/res/layout/item.xml
@@ -12,7 +12,7 @@
     <ImageView
         android:id="@+id/image"
         android:layout_width="wrap_content"
-        android:scaleType="center"
+        android:scaleType="centerInside"
         android:layout_height="wrap_content" />
 
 </LinearLayout>
